fix: Changed the way we defined the endpoints in /spaces and some other changes in Controllers and Models
